@@ -52,7 +52,8 @@ class Cfg:
                          "p" : "prev_mark",
                          " " : "reader",
                          "c" : "toggle_collapse_tag",
-                         "C" : "toggle_collapse_all",
+                         "C" : "set_collapse_all",
+                         "V" : "unset_collapse_all",
                          "m" : "toggle_mark",
                          "r" : "tag_read",
                          "R" : "all_read",
