@@ -91,12 +91,12 @@ g
 Use the defined browser to goto the item's URL (goto)
 
 .TP
-C
-Toggle collapse all tags (toggle_collapse_all)
+C / V
+Collapse/Uncollapse all tags (set_collapse_all) (unset_collapse_all)
 
 .TP
 c
-Collapse current tag (toggle_collapse_tag)
+Collapse/Uncollapse current tag (toggle_collapse_tag)
 
 .TP
 f
